--- a/ControlPanel.kv
+++ b/ControlPanel.kv
@@ -1,10 +1,3 @@
-<Slider>
-    id: slider
-    min: 0
-    max: 180
-    step: 1
-    orientation: 'horizontal'
-
 <Grid>
 
 
@@ -40,9 +33,11 @@
 
             Button:
                 text: 'close'
+                on_press: app.btn_blind_close()
 
             Button:
                 text: 'open'
+                on_press: app.btn_blind_open()
 
         Label:
             text: "Lamp"
@@ -104,7 +99,9 @@
 
             Button:
                 text: 'turn on'
+                on_press: app.btn_desktopLamp_on()
 
             Button:
                 text: 'turn off'
+                on_press: app.btn_desktopLamp_off()
         
